--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                 <div id = "chart">
                 </div>
             </div>
+            <p style="text-align: center; margin-top:10px;">&copy;All Rights Reserved. Designed by Abhishek Bhemisetty</p>
         </section>
-
         <a id="back2Top" title="Back to top" href="#">&#10148;</a>
     </body>
     <script src="assets/scripts/script.js" type="text/javascript"></script>
