--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                             Several known coronaviruses are circulating in animals that have not yet infected humans. 
                         </p>
                     </div>
-                    <div class="col-lg-6" data-aos="fade-left" data-aos-delay="500" >
-                        <video autoplay loop muted width="648" height='650'>
+                    <div class="col-lg-6 ov-vid" data-aos="fade-left" data-aos-delay="500" >
+                        <video autoplay loop muted id = "ov-vid">
                             <source src="redit_anim.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -100,8 +100,8 @@
         <section id = "symptoms">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-6 sy-vid" data-aos="fade-right" data-aos-delay="300">
-                        <video autoplay loop muted width="648" height='650'>
+                    <div class="col-lg-6" data-aos="fade-right" data-aos-delay="300">
+                        <video autoplay loop muted width="648" height='650' id="sy-vid">
                             <source src="sym.mp4" type="video/mp4">
                         </video>
                     </div>
