Made more responsive

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
     <head>
         <title>COVID-19</title>
         <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
@@ -24,7 +24,7 @@
         </script>
         <div class="container-fluid">
             <div class="row" >
-                <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
+                <div class="col-lg-6 logoo" data-aos="fade-right" data-aos-delay="200">
                     <a  href="/index.html" >
                         <img src="images/new_coo.png" width='431' height = '380' alt="logo">
                     </a>
