--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <img src="images/new_coo.png" width='431' height = '380' alt="logo">
                     </a>
                 </div>
-                <div class="col-lg-6 main" data-aos="fade-left" data-aos-delay="300">
+                <div class="col-lg-6 main" data-aos="fade-left" data-aos-delay="200">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -52,11 +52,11 @@
                         </div>
                     </nav>
                     <section id="about">
-                        <div class="container" data-aos="fade-left" data-aos-delay="350">
+                        <div class="container" data-aos="fade-left" data-aos-delay="200">
                             <h1>What is COVID-19?</h1>
                             <p>
                                 Coronavirus disease 2019 (COVID-19) is an infectious disease caused by<br>a newly discovered severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2)<br>
-                                <button class="see-more" data-aos="fade-down" data-aos-delay="400">
+                                <button class="see-more" data-aos="fade-down" data-aos-delay="200">
                                     <a href="#overview" style="color:black;">See more</a>
                                 </button>
                             </p>
@@ -69,7 +69,7 @@
         <section id="overview">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-6 ov-main" data-aos="fade-right" data-aos-delay="300">
+                    <div class="col-lg-6 ov-main" data-aos="fade-right" data-aos-delay="200">
                         <h2>OVERVIEW</h2>
                         <p class="info">
                             Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus. 
@@ -79,7 +79,7 @@
                         </p>
                         <p class="info second">
                             Coronaviruses (CoV) are a large family of viruses that cause illness ranging from the common cold to more severe diseases 
-                            such as <a href="http://www.emro.who.int/health-topics/mers-cov/index.html">Middle East Respiratory Syndrome (MERS-CoV)</a> and Severe Acute Respiratory Syndrome (SARS-CoV).
+                            such as <a href="http://www.emro.who.int/health-topics/mers-cov/index.html" target="_blank">Middle East Respiratory Syndrome (MERS-CoV)</a> and Severe Acute Respiratory Syndrome (SARS-CoV).
                             A novel coronavirus (nCoV) is a new strain that has not been previously identified in humans.
                         </p>
                         <p class="info three">
@@ -88,7 +88,7 @@
                             Several known coronaviruses are circulating in animals that have not yet infected humans. 
                         </p>
                     </div>
-                    <div class="col-lg-6 ov-vid" data-aos="fade-left" data-aos-delay="500" >
+                    <div class="col-lg-6 ov-vid" data-aos="fade-left" data-aos-delay="200" >
                         <video autoplay loop muted id = "ov-vid">
                             <source src="redit_anim.mp4" type="video/mp4">
                         </video>
@@ -100,12 +100,12 @@
         <section id = "symptoms">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-6" data-aos="fade-right" data-aos-delay="300">
+                    <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
                         <video autoplay loop muted width="648" height='650' id="sy-vid">
                             <source src="sym.mp4" type="video/mp4">
                         </video>
                     </div>
-                    <div class="col-lg-6 sy-main" data-aos="fade-left" data-aos-delay="500">
+                    <div class="col-lg-6 sy-main" data-aos="fade-left" data-aos-delay="200">
                         <div id="particles-js"></div>
                         <h2 >SYMPTOMS</h2>
                         <h3>Most Common Symptoms</h3>
@@ -138,7 +138,7 @@
         <section id= "prevention">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-6 dos pv-main" data-aos="fade-right" data-aos-delay="300">
+                    <div class="col-lg-6 dos pv-main" data-aos="fade-right" data-aos-delay="200">
                         <h2>Prevention</h2>
                         <p class="prev_1"> 
                             To date, there are no specific vaccines or medicines for COVID-19. 
@@ -156,7 +156,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-6 donts" data-aos="fade-left" data-aos-delay="500">
+                    <div class="col-lg-6 donts" data-aos="fade-left" data-aos-delay="200">
                         <h2>Prevention</h2>
                         <p class="prev_1">
                             It is normal to feel sad, stressed, or confused during a crisis.  
@@ -185,6 +185,7 @@
                 <div id = "chart">
                 </div>
             </div>
+            <p style="text-align: center; margin-top:10px; margin-bottom: 15px;">References: WHO,Helix Animation,Free Medical Education</p>
             <p style="text-align: center; margin-top:10px;">&copy;All Rights Reserved. Designed by Abhishek Bhemisetty</p>
         </section>
         <a id="back2Top" title="Back to top" href="#">&#10148;</a>
