changed vid width&height

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                         </p>
                     </div>
                     <div class="col-lg-6 ov-vid" data-aos="fade-left" data-aos-delay="200" >
-                        <video autoplay loop muted id = "ov-vid">
-                            <source src="redit_anim.mp4" type="video/mp4">
+                        <video autoplay loop muted width="576" height="720">
+                            <source id="ov-vid"src="redit_anim.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
