--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </p>
                     </div>
                     <div class="col-lg-6 ov-vid" data-aos="fade-left" data-aos-delay="200" >
-                        <video autoplay loop muted width="576" height="720">
+                        <video autoplay loop muted class="ov-nvid" >
                             <source id="ov-vid"src="redit_anim.mp4" type="video/mp4">
                         </video>
                     </div>
